--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.2.3",
     "dom": "^0.0.3",
     "express": "^4.18.2",
+    "focus-trap-react": "^10.0.2",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
