--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-crud-icons": "^1.2.2",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-overlays": "^5.2.1",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
